--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,22 +3,24 @@
       <a href="#" materialize="sideNav" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li *ngIf="isLoggedIn" (click)="logout()"><a><i class="material-icons">power_settings_new</i></a></li>
-        <li><a (click)="goHome()">Home</a></li>
-        <li><a (click)="goAbout()">About</a></li>
-        <li><a (click)="toggleNewBoard()" class="waves-effect waves-light">New</a></li>
+        <li *ngIf="!isLoggedIn" (click)="login()"><a>Log In</a></li>
+        <li *ngIf="isLoggedIn" (click)="goHome()"><a>Home</a></li>
+        <!-- <li><a (click)="goAbout()">About</a></li> -->
+        <li *ngIf="isLoggedIn"><a (click)="toggleNewBoard()" class="waves-effect waves-light">New</a></li>
         <!--Dropdown Board List Trigger for nonmobile device-->
         <li><a materialize="dropdown" [materializeParams]="[{hover: true}]" class="dropdown-button" data-activates="boards_">Boards<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li><a (click)="goProfile()"><i class="material-icons">perm_identity</i></a></li>
+        <li *ngIf="isLoggedIn"><a (click)="goProfile()"><i class="material-icons">perm_identity</i></a></li>
       </ul>
 
       <ul class="side-nav" id="mobile-nav">
         <!--<li><a [routerLink]="['']">Home</a></li>
         <li><a [routerLink]="['about']">About</a></li>-->
         <li><a (click)="goHome()">Home</a></li>
-        <li><a (click)="goAbout()">About</a></li>
-        <li><a (click)="toggleNewBoard()" class="waves-effect waves-light">New</a></li>
+        <!-- <li><a (click)="goAbout()">About</a></li> -->
+        <li *ngIf="isLoggedIn"><a (click)="toggleNewBoard()" class="waves-effect waves-light">New</a></li>
         <!--Dropdown Board List Trigger for mobile device-->
         <li><a materialize="dropdown" [materializeParams]="[{hover: true}]" class="dropdown-button" data-activates="boards_mobile">Boards<i class="material-icons right">arrow_drop_down</i></a></li>
+        <li *ngIf="isLoggedIn"><a (click)="goProfile()"><i class="material-icons">perm_identity</i></a></li>
       </ul>
 
     </div>
