Fixed creating board and login save to DB

--- a/src/app/+auth/login/login.component.html
+++ b/src/app/+auth/login/login.component.html
@@ -20,11 +20,10 @@
   <div>
     <button (click)="loginGoogle()">Login with Google</button>
   </div>
+  <br>
     <div>
-        <a routerLink="/reset">Forgotten password?</a>
-    </div>
-    <div>
-        Don't have an account?
+        <a routerLink="/reset">Reset password</a>
+        
     </div>
     <div>
         <a routerLink="/signup">Register</a>
