--- a/src/app/board-form/board-form.component.html
+++ b/src/app/board-form/board-form.component.html
@@ -1,17 +1,52 @@
 
+<div *ngIf="showCreateBoard.isOn" class="modal-container modal-center">
+    <div class="modal-block modal-width">
+      <div class="modal-head">
+  
+        <div (click)="closeBoard()"><div class="hover-pointer"><i class="material-icons right">close</i></div>
+         New Board
+        </div>
+      </div>
+      <div class="modal-bod">
+        <div class="row">
+ 
+            <form (ngSubmit)="onSubmit(boardForm)" #boardForm="ngForm">
+                <div class="modal-bod">
+                    <!--<div class="input-field col s12">-->
+                      <input name="title" id="title" type="text" ngModel required>
+                      <label for="title">Title</label>
+                </div>
+                <div class="modal-bod">
+                  <div >
+                    <input name="classification_id" type="checkbox" id="public" value="faad67d2-7ec6-494e-a4ef-ac126481f77f" [checked]="!isPublic" (change)="isPublic = $event.target.checked" />
+                    <label for="public">Public</label>
+                  </div>
+                </div>
+                <div class="modal-foot">
+                  <button type="submit"  [disabled]="!boardForm.form.valid">Add</button>
+                </div>
+              </form>
+  
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+<!-- 
     <div class="modal-bod">
 
       <app-dialog [(visible)]="showCreateBoard.isOn" [width_size]="'40%'" [newTitle]="'New Board'">
         <form (ngSubmit)="onSubmit(boardForm)" #boardForm="ngForm">
           <div class="modal-bod">
-              <!--<div class="input-field col s12">-->
+              
                 <input name="title" id="title" type="text" ngModel required>
                 <label for="title">Title</label>
-              <!--</div>-->
+             
           </div>
           <div class="modal-bod">
             <div >
-              <input name="classification_id" type="checkbox" id="public" value="faad67d2-7ec6-494e-a4ef-ac126481f77f" [checked]="isPublic" (change)="isPublic = $event.target.checked" />
+              <input name="classification_id" type="checkbox" id="public" value="faad67d2-7ec6-494e-a4ef-ac126481f77f" [checked]="!isPublic" (change)="isPublic = $event.target.checked" />
               <label for="public">Public</label>
             </div>
           </div>
@@ -22,4 +57,5 @@
       </app-dialog>
 
     </div>
+   -->
 
