--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -26,7 +26,7 @@
     </div>
   </nav>
  <!-- Dropdown menu for boards selection. This is hidden until triggered at line 19 -->
- <ul id="boards_" class="dropdown-content"> -->
+ <ul id="boards_" class="dropdown-content truncate"> -->
   <li class="boards-link" *ngFor="let board of boards; let i = index; trackBy board?.board_Id"><a [routerLink]= "['/board', board.board_Id]">{{board.title}}</a></li>
 </ul>
 <!--Dropdown menu for mobile devices-->
