--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,2 +1,3 @@
 <p> it works test component</p>
+<upload></upload>
 <!-- <input type="file" id="btnUpload" value="Upload" (change)="fileChange($event)" class="upload" /> -->
