--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,6 +2,7 @@
 // Colors
 $deepBlue: #032f3e;
 $offWhite: #f8f8fb;
+$white: #f8f8fb;
 $link: #03A9F4;
 $plum: #53354A;
 
@@ -18,6 +19,17 @@ $nav-menu-color:        #ee6e73;
 $warning-red: #a94442;
 $ok-green: #42A948;
 $x-red: #BB3333;
+
+
+$blue: #38A2FB;
+$purple: #5754A3;
+$grey: #D7D8D7;
+$green: #93E777;
+$red: #C11161;
+
+$text: #74809D;
+$text-light: #C0C4C7;
+$border: #D2D6DA;
 
 //  $bg-gradient-1: #607D8B;
  $bg-gradient-1: #f8f8fb;
