Upload component, login, board svc

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -102,7 +102,7 @@
                 </span>
               </a>
             </div>
-            <div *ngIf="showUploadInput">{{fileUploadParam.itemId}}
+            <div *ngIf="showUploadInput">
                 <upload [itemId]="fileUploadParam.itemId" ></upload> 
             </div>
           </div>
