--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -263,6 +263,16 @@ section {
     cursor: pointer;
     }
   }
+
+  .dragItem{
+    border:1px solid #aaa;
+    width:50%;
+    padding:2px 4px;
+    margin:5px 0;
+  }
+  .highlight{
+    border:solid 1px ligten(teal, 25%);
+  }
 // end of cards
 
 // ****** The Modal (background) *******/
