--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -294,7 +294,7 @@ section {
 
 // * Modal body */
 .modal-block {
-    // flex: 1;
+    z-index: 1;
     position: fixed;
     margin-top: 105px !important;
     display: flex;
