Fixed board list menu

--- a/src/app/+auth/login/login.component.html
+++ b/src/app/+auth/login/login.component.html
@@ -8,13 +8,16 @@
         </p>
         <p>
             <label> Password
-                <input type="password" name="password" (ngModel)="password" required>
+                <input type="text" name="password" (ngModel)="password" required>
             </label>
         </p>
 
         <button type="submit" [disabled]="!formData.valid">Login</button>
 
-<hr/>
+        <p>
+
+        </p>
+
     </form>
   </div>
   <div>
