Added user.reducer, actions

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
 <hr />
 <h4>{{title}}</h4>
 <!-- ******* U P L O A D <upload [param]="{itemId:'sampleItemIdddd'}"></upload> *******-->
-<input debounce [delay]="700" (onKeyupEmit)="onTextUpdate($event)" [(ngModel)]="title">
+<!-- <input debounce [delay]="700" (onKeyupEmit)="onTextUpdate($event)" [(ngModel)]="title"> -->
 <!-- [(ngModel)]="textDescription" -->
 
 
