--- a/src/app/+auth/signup/signup.component.html
+++ b/src/app/+auth/signup/signup.component.html
@@ -7,8 +7,9 @@
                 </label>
             </p>
             <p>
-            <label> Password
-                <input type="password" name="password" (ngModel)="password" required>
+            <label> Password {{password}}
+                    
+                <input type="text" name="password" (ngModel)="password" required>
             </label>
             </p>
     
